# golf-edge

./: .env.example  .gitignore  README.md  REPOLAYOUTv.01.md  golf_edge.db  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  courses.py  events.py  mevo.py  proxy.py  rounds.py  sensors.py  sessions.py  ws.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: course.py  environment_sample.py  hole.py  mevo_observation.py  round.py  round_control_state.py  round_hole_state.py  round_shot.py  session.py  swing_event.py
deploy/systemd/: railgolf-api.service
docs/: android_app_architecture.md  system_plan.md
golf_edge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mevobinder_native/: settings.gradle.kts
mevobinder_native/app/: build.gradle.kts
rail-golf-android/: build.gradle.kts  settings.gradle.kts
rail-golf-android/app/: build.gradle.kts
rail-golf-android/core-accessibility/: build.gradle.kts
rail-golf-android/core-common/: build.gradle.kts
rail-golf-android/core-model/: build.gradle.kts
rail-golf-android/core-pi-api/: build.gradle.kts
rail-golf-android/core-ui/: build.gradle.kts
rail-golf-android/feature-dashboard/: build.gradle.kts
rail-golf-android/feature-fsgolf-control/: build.gradle.kts
rail-golf-android/feature-proxy/: build.gradle.kts
rail-golf-android/gradle/: libs.versions.toml
tablet_app/: README.md  pubspec.yaml
tablet_app/lib/: app.dart  controller_setup_screen.dart  main.dart  wallet_connect_gate.dart  wifi_setup_screen.dart
tablet_app/test/: widget_test.dart
(+106 files in other folders)
