[project]
name = "golf-edge"
version = "0.1.0"
description = "Raspberry Pi golf edge analytics platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "aiosqlite>=0.20.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
vision = ["opencv-python>=4.10.0"]
sensors = ["smbus2>=0.4.3"]
mevo = []
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
